# Cbb

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
include/Cbb/: Fraction.hpp  Metre.hpp  Midi.hpp  NoteValue.hpp  Pitch.hpp  PitchClass.hpp  Tuning.hpp
include/Cbb_old/: Fraction.hpp  Midi.hpp
include/cbb/: fraction.hpp  note_value.hpp  note_value_constants.hpp  power_of_2.hpp  power_of_2_constants.hpp
src/: CMakeLists.txt
src/Cbb/: CMakeLists.txt  Fraction.cpp  Fraction.test.cpp  Metre.cpp  Metre.test.cpp  Midi.cpp  Midi.test.cpp  NoteValue.cpp  NoteValue.test.cpp  Pitch.cpp  Pitch.test.cpp  PitchClass.cpp  PitchClass.test.cpp  Tuning.cpp
src/Cbb_old/: Midi.cpp  Midi.test.cpp  NoteValue.test.cpp  Pitch.cpp  Pitch.test.cpp
src/cbb/: CMakeLists.txt  note_value.cpp  note_value.test.cpp  note_value_constants.cpp  power_of_2.cpp  power_of_2.test.cpp  power_of_2_constants.cpp
